# HEngine

./: .gitignore  CMakeLists.txt  README.md  build.bat  build2.bat  log.txt  test2.bat
doc/: vao.drawio
doc/dev_log/: 2020-06-29~07-05.md  2020-06.md  2020-07-06~07-13.md  2020-07-13~07-19.md  2020-08-03~08-09.md
doc/material/: yy33技能系统.md  yy33技能系统配图.drawio
include/: Camera.hpp  LogManager.hpp  MtlLoader.hpp  ObjLoader.hpp  glbuffer_mgr.hpp  logger.hpp  shader_mgr.h  shape2d.hpp  shape_base.hpp
include/3D/: Animation.hpp  Bone.hpp  SkModel.hpp  Skeleton.hpp  Skin.hpp  Terrain.hpp
include/FreeType/: FreeType.hpp
include/GLObject/: ConstUniform.hpp  DrawCommand.hpp  Drawable.hpp  FontAtlas.hpp  FontTexture.hpp  FrameBuffer.hpp  Geometry.hpp  Light.hpp  Model.hpp  Program.hpp  Texture.hpp  Transform.hpp  UniformBlock.hpp  VertexArray.hpp  VertexBuffer.hpp  iMesh.hpp
include/base/: Director.hpp
include/sb7/: sb7color.h  vmath.h
include/ui/: Common.hpp  Director.hpp  ParticleSystem.hpp  Scene.hpp  Text.hpp  Touch.hpp  Widget.hpp
include/utils/: FileUtils.hpp  Parser.hpp  StringUtils.hpp
lib/: glew32d.exp  glfw3.lib  glfw3_d.lib  libglew32d.lib
log/: log.txt
package/config/: UniformBlock.xml  test.xml
package/script/python/: __init__.py
package/shader/: axis.vs  common.fs  common_light.fs  common_light.vs  common_light_no_tex.fs  common_light_no_tex.vs  light.vs  terrain.tesc  texture.fs  texture.vs  ui.fs  ui.vs  ui_text.fs  ui_texture.fs
package/shader/postprocess/: color.fs  depth.fs
package/shader/terrain/: terrain.fs  terrain.tesc  terrain.tese  terrain.vs
package/shader/ui/: ui_blink.fs
package/spine/dragon/: Dragon.json
package/ui/: scene_test.xml
script/python/: __init__.py
shader/: common.fs  common.vs  common_light.fs  common_light.vs  fragment  geometry  light.vs  tess_control_shader.tess  tess_evaluation_shader.tess  texture.fs  ui.vs  vertex
src/: Camera.cpp  LogManager.cpp  logger.hpp  main.cpp  python_binding.cpp  shader_mgr.cpp  shape2d.cpp  shape2d.hpp
src/3D/: Animation.cpp  Bone.cpp  ObjLoader.hpp  SkModel.cpp  Skeleton.cpp  Skeleton.hpp  Skin.cpp  Terrain.cpp  Terrain.hpp
src/FreeType/: FreeType.cpp  FreeType.hpp
src/GLObject/: ConstUniform.cpp  DrawCommand.cpp  Drawable.cpp  FontAtlas.cpp  FontAtlas.hpp  FontTexture.cpp  FrameBuffer.cpp  FrameBuffer.hpp  Geometry.cpp  Geometry.hpp  Light.cpp  Light.hpp  Model.cpp  Program.cpp  Texture.cpp  Texture.hpp  Transform.hpp  UniformBlock.cpp  UniformBlock.hpp  VertexArray.cpp  VertexBuffer.cpp
src/base/: Director.cpp  Director.hpp  EventDispatcher.cpp  EventDispatcher.hpp
src/camera/: Camera.cpp  Camera.hpp  CameraManager.cpp  CameraManager.h
src/model_loader/: MtlLoader.cpp  ObjLoader.cpp  ObjParser.cpp
src/test/: CMakeLists.txt  main.cpp
src/ui/: Button.hpp  Common.hpp  Director.cpp  ParticleSystem.cpp  ParticleSystem.hpp  Scene.cpp  Text.cpp  Touch.cpp  Touch.hpp  Widget.cpp  imgui.cpp  imgui.h  shape2d.cpp
src/utils/: FileUtils.cpp  Logger.cpp  Logger.hpp  Parser.cpp  Parser.hpp  StringUtils.cpp  StringUtils.hpp
